--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,14 +3,26 @@ body {
   position: relative;
   text-align: center;
   background-color: #70DBDB;
-  color: green;
+  color: #fafafa;
 }
 
 h1 {
-  font-family: "Playfair Display";
+  font-family: "Josefin Sans", "Playfair Display";
+  font-weight: bold;
   text-shadow: 7px 7px 8px 	#2764aa;
   font-size: 6em;
   color: 	#4d4dff;
+}
+
+.file {
+  margin-left: 40%;
+  font-size: 1em;
+  text-align: center;
+}
+
+.neat {
+  font-size: 2.5em;
+  color: #2764aa;
 }
 
 .container {
@@ -22,4 +34,5 @@ h1 {
   text-align: center;
   background-color: #70acac;
   border-radius: 30px;
+  box-shadow: 10px 10px 10px #70abab;
 }
