--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,6 +4,7 @@
 <title>PhotoFact</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 </head>
 
@@ -12,8 +13,9 @@
     <h1>PhotoFact</h1>
       <p>Get a neat fact about the uploaded picture.</p>
       <form action="/upload" method="post" enctype="multipart/form-data">
-        <input type="file" name="file" value='hue'>
-        <input type="submit" value="Watson's Visual Recognition">
+        <input class="file" type="file" name="file" value='hue'>
+        <br>
+        <input class="neat" type="submit" value="Get Neat Fact!">
       </form>
       <% if (typeof(json)!='undefined') { %>
         <br><br><hr>
